--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 anyio==3.6.2
+pytest-asyncio==0.20.3
 asgiref==3.6.0
 asyncpg==0.27.0
 attrs==22.2.0
 certifi==2022.5.18.1
 click==8.1.3
 fastapi==0.89.1
-GeoAlchemy2==0.11.1
 greenlet==1.1.2
 gunicorn==20.1.0
 h11==0.12.0
